--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@ body{
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.header-section{
+    height: 100px;
+}
 .navber{
     float: right;
     margin-bottom: 50px;
     height: 50px;
-    margin-right: 100px;
-
+    margin-right: 135px;
 }
 .menu li{
     float: left;
@@ -73,8 +76,14 @@ h1{
 .all-project{
 width: 80%;
 margin: 0 auto;
-padding: 50px 0;
+}
+.second-part{
+    height: 150px;
+    padding-top:40px;
+}
 
+.first-part{
+height: 150px;
 }
 
 .latest span{
@@ -93,29 +102,35 @@ padding: 50px 0;
     padding-bottom: 20px;
 }
 
+.working-project p{
+    text-align: center;
+}
+
 .title{
     margin-top: 10px;
+    text-align: center;
+    color: tomato;
 }
 
 .latest-working-project{
     height: 600px;
     background: rgb(252, 249, 249);
-    width: 100%;
-    padding-bottom: 50px;
+    width:100%;
 }
+.service-part{
+    background: rgba(9, 105, 143, 0.205);
+}
+
 .button{
     background-image: linear-gradient(40deg, orange, tomato);
     padding: 10px 40px;
     border-radius: 5px;
     color: white;
+    border: none;
 }
-.sercice-name{
-    float: left;
-}
-
 
 .footer{
-    height: 400px;
+    height: 200px;
     padding: 100px 0;
 }
 
